syntax = "proto3";

option csharp_namespace = "Skua.gRPC.Server";

package sync;

import "google/protobuf/empty.proto";

service Synchronizer {
    rpc Reply (ReplyRequest) returns (google.protobuf.Empty);
    rpc SendCommand (SendCommandRequest) returns (google.protobuf.Empty);
    rpc StartSync (stream SyncRequest) returns (stream SyncResponse);
}

message ReplyRequest {
    int32 id = 1;
    string reply = 2;
}

message SyncRequest {
    int32 id = 1;
    string command = 2;
    repeated string arguments = 3;
}

message SyncResponse {
    string command = 1;
    repeated string arguments = 2;
}

message SendCommandRequest {
    int32 id = 1;
    string command = 2;
    repeated string arguments = 3;
}

message CanStartSyncClientRequest {
    int32 id = 1;
}

message CanStartSyncClientResponse {
    bool canStart = 1;
}